[gd_scene load_steps=3 format=3 uid="uid://c4votcijhmgs3"]

[ext_resource type="Theme" uid="uid://bp7ntkss4y7ms" path="res://scenes/theme.tres" id="1_i4dui"]
[ext_resource type="Script" path="res://scenes/popups/app_scale_popup.gd" id="1_o6h6a"]

[node name="AppScalePopup" type="Window"]
title = "App Scale"
initial_position = 2
size = Vector2i(300, 55)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
popup_window = true
theme = ExtResource("1_i4dui")
script = ExtResource("1_o6h6a")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PopupMargins"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="AppScaleSlider" type="HSlider" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 3.0
step = 0.1
value = 1.0

[node name="AppScaleLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
text = "8.8"
horizontal_alignment = 1

[connection signal="drag_ended" from="MarginContainer/HBoxContainer/AppScaleSlider" to="." method="_on_app_scale_slider_drag_ended"]
[connection signal="drag_started" from="MarginContainer/HBoxContainer/AppScaleSlider" to="." method="_on_app_scale_slider_drag_started"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/AppScaleSlider" to="." method="_on_app_scale_slider_value_changed"]
